fixed spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -287,9 +287,8 @@ button{
   margin-left: auto;
   margin-right: auto;
   grid-column: repeat(2, minmax(0, 1fr));
-  width: 80%;
   grid-row-gap: 1em;
-  width: 150px
+  width: 200px;
 }
 
 .download {
@@ -308,6 +307,9 @@ button{
 
 .topPadding {
   margin-top: 2em;
+}
+.bottomPadding {
+  margin-bottom: 5em;
 }
 
 .Links {
@@ -400,9 +402,18 @@ button{
     height: 47px;
   }
 
+  .buttons a {
+    width: 120px;
+  }
+
 
   .about-image img{
     width: 40%;
+  }
+
+  .download {
+    padding-left: 5px;
+    padding-right: 5px;
   }
 
 }
